Added an accessibility page and content for legal purposes

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Sun May 16 2021 06:53:14 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
+<html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Our Team of Acupuncturists | Ryu Acupuncture Clinic</title>
-  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." name="description">
-  <meta content="Our Team  of Acupuncturists | Ryu Acupuncture Clinic" property="og:title">
-  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." property="og:description">
-  <meta content="Our Team  of Acupuncturists | Ryu Acupuncture Clinic" property="twitter:title">
-  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." property="twitter:description">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Accessibility</title>
+  <meta content="Accessibility" property="og:title">
+  <meta content="Accessibility" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -47,7 +42,7 @@ drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
 </head>
-<body class="ryu_body">
+<body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div class="brand_block">
@@ -57,7 +52,7 @@ drift.load('r73nxaxiv89c');
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
-        <a href="team.html" aria-current="page" class="nav_link w-nav-link w--current">Team</a>
+        <a href="team.html" class="nav_link w-nav-link">Team</a>
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
@@ -69,32 +64,22 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="our_team_section">
+  <div class="accessibility_section">
     <div class="main_container">
-      <h1 class="section_h1">Our Team</h1>
-      <p class="solo_para">Our clinic is proudly family-owned and operated. Each member of our team brings different traits, skill sets, characteristics and specialties to the office - which makes us quite unique and more than capable of handling a wide-variety of different ailments. We are constantly working on improving our skills, keeping up with the latest medical information available and honing our technique. We welcome you to learn a bit more about each member of our team, our family.</p>
-      <div class="blue_divide"></div>
-      <div class="_2_block_row margin_bottom">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 414.4375px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="Jay Ryu in the office." class="bio_img"></div>
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497e" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
-          <h2 class="section_h2_left">Dr. Jay Ryu, L.Ac., Ph.D</h2>
-          <p class="bio_para">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean. Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
-        </div>
-      </div>
-      <div class="_2_block_row margin_bottom">
-        <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557035" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/veronica_ryu.jpg" loading="lazy" alt="Veronica Ryu in the office." class="bio_img"></div>
-        <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557037" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
-          <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
-          <p class="bio_para">Veronica is a board certified acupuncturist and focuses on synergy of the mind and body. With her skills in traditional acupuncture, hand acupuncture, and herbal medicine, she has a strong motivation for women’s health, mental health, and daily functioning of overall wellness. She has a background working with fertility, pain, autoimmune conditions, cancer, and many other chronic conditions.<br><br>Veronica has received the top 10 student award numerous times and continues to be a student of life and medicine. She vehemently pursues her passion in creating a deeper understanding of that strange link between the human mind and energy.</p>
-        </div>
-      </div>
-      <div class="_2_block_row margin_top">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 337.5px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" alt="Jennifer Ryu in the office." class="bio_img"></div>
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
-          <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
-          <p class="bio_para">Jennifer followed into her father’s footsteps and has adopted the approach of treating the root causes and following the journey to wellness. She is board certified and uses traditional acupuncture, Korean hand acupuncture, auricular acupuncture, herbal medicine and many other techniques and modalities. She has a background working in autoimmune conditions, cancer, fertility, pain, and many other chronic conditions.<br><br>In her current enrollment of her Doctorate program, she is furthering her area of interest in fertility to women of and beyond the primal reproductive years. Her goal is to create a simpler understanding or dialogue to bridge the gap between and Eastern and Western medicine.</p>
-        </div>
-      </div>
+      <h1 class="section_h1">Accessibility</h1>
+      <p class="legal_timestamp"><strong>Last updated May 15th, 2021</strong></p>
+      <h2 class="legal_h2">General</h2>
+      <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
+      <h2 class="legal_h2">Accessibility on www.ryuacupuncture.com</h2>
+      <p class="legal_para">www.ryuacupuncture.com makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows www.ryuacupuncture.com to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).</p>
+      <h2 class="legal_h2">Enabling the Accessibility Menu</h2>
+      <p class="legal_para">The www.ryuacupuncture.com accessibility menu can be enabled by clicking the accessibility menu icon that appears on the corner of the page. After triggering the accessibility menu, please wait a moment for the accessibility menu to load in its entirety.</p>
+      <h2 class="legal_h2">Disclaimer</h2>
+      <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered </p>
+      <h2 class="legal_h2">Here For You</h2>
+      <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
+      <h2 class="legal_h2">Contact Us</h2>
+      <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
     </div>
   </div>
   <div class="footer_section">
@@ -109,7 +94,7 @@ drift.load('r73nxaxiv89c');
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
               <li class="footer_link">
-                <a href="team.html" aria-current="page" class="link_white w--current">Team</a>
+                <a href="team.html" class="link_white">Team</a>
               </li>
               <li class="footer_link">
                 <a href="services.html" class="link_white">Services</a>
