Reformmatted accessibility page to match the layout of other legal pages

--- a/detail_blog.html
+++ b/detail_blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 16 2021 06:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun May 16 2021 08:46:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60978474138d1bb14dcd9917" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -105,6 +105,9 @@ drift.load('r73nxaxiv89c');
               </li>
               <li class="footer_link">
                 <a href="privacy.html" class="link_white">Privacy Policy</a>
+              </li>
+              <li class="footer_link">
+                <a href="accessibility.html" class="link_white">Accessibility</a>
               </li>
             </ul>
           </div>
