--- a/accessibility.html
+++ b/accessibility.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 16 2021 06:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun May 16 2021 08:46:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -64,22 +64,67 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="accessibility_section">
+  <div class="accessibility_section_main">
     <div class="main_container">
       <h1 class="section_h1">Accessibility</h1>
       <p class="legal_timestamp"><strong>Last updated May 15th, 2021</strong></p>
-      <h2 class="legal_h2">General</h2>
+      <h2 class="legal_h2">TABLE OF CONTENTS</h2>
+      <ol role="list">
+        <li>
+          <a href="#accessibility_section_1" class="blue_link-2">GENERAL</a>
+        </li>
+        <li>
+          <a href="#accessibility_section_2" class="blue_link-2">ACCESSIBILITY ON WWW.RYUACUPUNCTURE.COM</a>
+        </li>
+        <li>
+          <a href="#accessibility_section_3" class="blue_link-2">ENABLING THE ACCESSIBILITY MENU</a>
+        </li>
+        <li>
+          <a href="#accessibility_section_4" class="blue_link-2">DISCLAIMER</a>
+        </li>
+        <li>
+          <a href="#accessibility_section_5" class="blue_link-2">HERE FOR YOU</a>
+        </li>
+        <li>
+          <a href="#accessibility_section_6" class="blue_link-2">CONTACT US</a>
+        </li>
+      </ol>
+    </div>
+  </div>
+  <div id="accessibility_section_1" class="accessibility_section_1">
+    <div class="main_container">
+      <h2 class="legal_h2">1. GENERAL</h2>
       <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
-      <h2 class="legal_h2">Accessibility on www.ryuacupuncture.com</h2>
+    </div>
+  </div>
+  <div id="accessibility_section_2" class="accessibility_section_2">
+    <div class="main_container">
+      <h2 class="legal_h2">2. ACCESSIBILITY ON WWW.RYUACUPUNCTURE.COM</h2>
       <p class="legal_para">www.ryuacupuncture.com makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows www.ryuacupuncture.com to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).</p>
-      <h2 class="legal_h2">Enabling the Accessibility Menu</h2>
+    </div>
+  </div>
+  <div id="accessibility_section_3" class="accessibility_section_3">
+    <div class="main_container">
+      <h2 class="legal_h2">3. ENABLING THE ACCESSIBILITY MENU</h2>
       <p class="legal_para">The www.ryuacupuncture.com accessibility menu can be enabled by clicking the accessibility menu icon that appears on the corner of the page. After triggering the accessibility menu, please wait a moment for the accessibility menu to load in its entirety.</p>
-      <h2 class="legal_h2">Disclaimer</h2>
-      <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered </p>
-      <h2 class="legal_h2">Here For You</h2>
-      <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
-      <h2 class="legal_h2">Contact Us</h2>
-      <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
+    </div>
+  </div>
+  <div id="accessibility_section_4" class="accessibility_section_4">
+    <div class="main_container">
+      <h2 class="legal_h2">4. DISCLAIMER</h2>
+      <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered use also for those of us with disabilities.<br><br>In an ongoing effort to continually improve and remediate any accessibility issues, we also regularly scan www.ryuacupuncture.com with UserWay&#x27;s Accessibility Scanner to identify and fix every possible accessibility barrier on our site. Despire our efforts to make all pages and content on www.ryuacupuncture.com fully accessible, some content may not have yet been fully adapted to the strictest accessibility standards. This may be a result of not having found or identified the most appropriate technological solution.</p>
+    </div>
+  </div>
+  <div id="accessibility_section_5" class="accessibility_section_5">
+    <div class="main_container">
+      <h2 class="legal_h2">5. HERE FOR YOU</h2>
+      <p class="legal_para">If you are experiencing difficulty with any content on www.ryuacupuncture.com or require assistance with any part of our site, please contact us during normal business hours as detailed below and we will be happy to assist.</p>
+    </div>
+  </div>
+  <div id="accessibility_section_6" class="accessibility_section_6">
+    <div class="main_container">
+      <h2 class="legal_h2">6. CONTACT US</h2>
+      <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., #510<br>Burbank, CA 91505<br>United States:</p>
     </div>
   </div>
   <div class="footer_section">
@@ -118,6 +163,9 @@ drift.load('r73nxaxiv89c');
               </li>
               <li class="footer_link">
                 <a href="privacy.html" class="link_white">Privacy Policy</a>
+              </li>
+              <li class="footer_link">
+                <a href="accessibility.html" aria-current="page" class="link_white w--current">Accessibility</a>
               </li>
             </ul>
           </div>
