--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 16 2021 06:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun May 16 2021 08:46:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -267,6 +267,9 @@ drift.load('r73nxaxiv89c');
               </li>
               <li class="footer_link">
                 <a href="privacy.html" aria-current="page" class="link_white w--current">Privacy Policy</a>
+              </li>
+              <li class="footer_link">
+                <a href="accessibility.html" class="link_white">Accessibility</a>
               </li>
             </ul>
           </div>
