Corrected address on legal pages, hyperlinked website listings

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 16 2021 08:46:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue May 18 2021 04:28:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -100,31 +100,33 @@ drift.load('r73nxaxiv89c');
   <div id="accessibility_section_2" class="accessibility_section_2">
     <div class="main_container">
       <h2 class="legal_h2">2. ACCESSIBILITY ON WWW.RYUACUPUNCTURE.COM</h2>
-      <p class="legal_para">www.ryuacupuncture.com makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows www.ryuacupuncture.com to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).</p>
+      <p class="legal_para">
+        <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> makes available UserWay&#x27;s Web Accessibility Widget, which is powered by a dedicated accessibility server. The software allows www.ryuacupuncture.com to improve its compliance with the Web Content Accessibility Guidelines (WCAG 2.1).
+      </p>
     </div>
   </div>
   <div id="accessibility_section_3" class="accessibility_section_3">
     <div class="main_container">
       <h2 class="legal_h2">3. ENABLING THE ACCESSIBILITY MENU</h2>
-      <p class="legal_para">The www.ryuacupuncture.com accessibility menu can be enabled by clicking the accessibility menu icon that appears on the corner of the page. After triggering the accessibility menu, please wait a moment for the accessibility menu to load in its entirety.</p>
+      <p class="legal_para">The <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> accessibility menu can be enabled by clicking the accessibility menu icon that appears on the corner of the page. After triggering the accessibility menu, please wait a moment for the accessibility menu to load in its entirety.</p>
     </div>
   </div>
   <div id="accessibility_section_4" class="accessibility_section_4">
     <div class="main_container">
       <h2 class="legal_h2">4. DISCLAIMER</h2>
-      <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered use also for those of us with disabilities.<br><br>In an ongoing effort to continually improve and remediate any accessibility issues, we also regularly scan www.ryuacupuncture.com with UserWay&#x27;s Accessibility Scanner to identify and fix every possible accessibility barrier on our site. Despire our efforts to make all pages and content on www.ryuacupuncture.com fully accessible, some content may not have yet been fully adapted to the strictest accessibility standards. This may be a result of not having found or identified the most appropriate technological solution.</p>
+      <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered use also for those of us with disabilities.<br><br>In an ongoing effort to continually improve and remediate any accessibility issues, we also regularly scan <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> with UserWay&#x27;s Accessibility Scanner to identify and fix every possible accessibility barrier on our site. Despire our efforts to make all pages and content on <a href="#" class="blue_link">www.ryuacupuncture.com</a> fully accessible, some content may not have yet been fully adapted to the strictest accessibility standards. This may be a result of not having found or identified the most appropriate technological solution.</p>
     </div>
   </div>
   <div id="accessibility_section_5" class="accessibility_section_5">
     <div class="main_container">
       <h2 class="legal_h2">5. HERE FOR YOU</h2>
-      <p class="legal_para">If you are experiencing difficulty with any content on www.ryuacupuncture.com or require assistance with any part of our site, please contact us during normal business hours as detailed below and we will be happy to assist.</p>
+      <p class="legal_para">If you are experiencing difficulty with any content on <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> or require assistance with any part of our site, please contact us during normal business hours as detailed below and we will be happy to assist.</p>
     </div>
   </div>
   <div id="accessibility_section_6" class="accessibility_section_6">
     <div class="main_container">
       <h2 class="legal_h2">6. CONTACT US</h2>
-      <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., #510<br>Burbank, CA 91505<br>United States:</p>
+      <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., Ste 510<br>Burbank, CA 91505<br>United States:</p>
     </div>
   </div>
   <div class="footer_section">
