--- a/accessibility.html
+++ b/accessibility.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue May 18 2021 04:28:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue May 18 2021 04:35:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -67,7 +67,7 @@ drift.load('r73nxaxiv89c');
   <div class="accessibility_section_main">
     <div class="main_container">
       <h1 class="section_h1">Accessibility</h1>
-      <p class="legal_timestamp"><strong>Last updated May 15th, 2021</strong></p>
+      <p class="legal_timestamp"><strong>Last updated May 17, 2021</strong></p>
       <h2 class="legal_h2">TABLE OF CONTENTS</h2>
       <ol role="list">
         <li>
