Adjusted a typo within the legal pages, specifically the accesssibility page

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat May 22 2021 06:57:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon May 24 2021 06:21:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -126,7 +126,7 @@ drift.load('r73nxaxiv89c');
   <div id="accessibility_section_6" class="accessibility_section_6">
     <div class="main_container">
       <h2 class="legal_h2">6. CONTACT US</h2>
-      <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., Ste 510<br>Burbank, CA 91505<br>United States:</p>
+      <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., Ste 510<br>Burbank, CA 91505<br>United States<br></p>
     </div>
   </div>
   <div class="footer_section">
