Added new Yelp review

--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jun 01 2021 06:47:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jun 18 2021 06:43:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -80,6 +80,13 @@ drift.load('r73nxaxiv89c');
         <a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a>
         <a data-filter=".google" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
         <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
+      </div>
+      <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+        <p class="testimonial_para">&quot;I love Dr. Ryu and everyone in his office! I had been to Dr. Ryu&#x27;s office several times for various aches and pains, but in March 2020, just before the initial shutdown, I started seeing him for fertility issues and continued seeing him throughout the pandemic. The office adopted safety measures quickly, and I always felt comfortable and safe going there. Since I was working from home and was avoiding contact with pretty much everyone, I saw Dr. Ryu more than anyone else, other than my husband, and the office became essentially my quarantine pod. I&#x27;m so grateful to everyone there for the warmth and exceptional care that was shown to me. I did treatments and took herbal medicine through the end of last year, and I&#x27;m happy to say that treatments were successful, and I&#x27;m expecting my baby later this year.&quot;</p><img src="images/karen_K.jpg" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Karen K.</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">6/13/2020</div>
+        <div class="testimonial_source">Review from Yelp</div>
       </div>
       <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <p class="testimonial_para">&quot;Dr.Ryu is such a woonderful acupuncturist! He listens to your pain and treats you with care!<br><br>I really liked that they made sure I fill out the patient info form, and asked questions related to COVID. The facility had lots of sanitary equipments and I felt safe, since I&#x27;ve been very cautious with the virus. When I first made an appointment, I spoke with Jennifer and she was so helpful and answered all my questions at length.<br><br>My neck was tense from sitting on the desk for so long from work and my elbow nerve was bothering me when I leaned on my desk. Dr.Ryu asked many questions to understand me better and checked my pulse carelly. Then he put the needles on my hand and explained to me how certain needles are connected in my body part.<br><br>It&#x27;s been a week and now my elbow is feeling so much better and I definitely feel less tense on my left shoulder!<br><br>If you&#x27;re scared of needles just like me, Ryu Acupuncturist will change your perception about needles! I&#x27;ve gone to many acupuncturists and some of them put the needle in a wrong place and makes it hurt and uncomfortable even after the treatment. Dr.Ryu&#x27;s treatment was so smooth and gentle, and I feel so much better! I found it so hard to find acupuncturists who actually treats patients with care these days, and I&#x27;m so glad I found Dr.Ryu who I can trust.&quot;</p><img src="images/christina_k.jpg" loading="lazy" alt="Profile picture of Christina K." class="testimonial_image">
