--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jun 18 2021 06:43:32 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jun 18 2021 06:48:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -81,11 +81,18 @@ drift.load('r73nxaxiv89c');
         <a data-filter=".google" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
         <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
       </div>
-      <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+      <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+        <p class="testimonial_para">&quot;My journey with Ryu Acupuncture began in 2019.  I started sessions after referral from a colleague I work with that had had success with his  treatments and became naturally pregnant after infertility. Dr. Ryu is extremely knowledgeable in his specialty and I do believe it was because of his treatments that in 2019, I successfully became pregnant with my first son after my embryo transfer procedure post IVF.<br><br>I resumed treatments December 2020 in hopes for another successful pregnancy in conjunction with IVF. This course I also opted to utilize his Chinese herbs (formulated specific to his assessment based on your bodies needs.) I took the herbs for 2 months consecutively. Not only did his treatments normalize the intervals between my menstrual cycles but also successfully aided in my second pregnancy, this time naturally conceived.<br><br>The office staff is friendly, knowledgeable and courteous. The office is clean and presentable. Current covid protocol require temperature checks, masks, and face shields. A few times I&#x27;ve had to reschedule appointments and the clinic is very flexible to your needs. I can&#x27;t wait until the resume a full weeks schedule as Thursday&#x27;s would be best for me and currently due to covid the are not open Tuesday&#x27;s and Thursday&#x27;s.<br><br>There are not enough words to describe how good Dr. Ryu is along with his staff. Patience is key when undergoing acupuncture treatments as it is a process but whatever your goal is upon seeking treatment, just no that you will get the results you desired.&quot;</p><img src="images/kimberly_C.jpg" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Kimberly C.</div>
+        <div class="testimonial_location">Sylmar, CA</div>
+        <div class="testimonial_date">6/13/2021</div>
+        <div class="testimonial_source">Review from Yelp</div>
+      </div>
+      <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <p class="testimonial_para">&quot;I love Dr. Ryu and everyone in his office! I had been to Dr. Ryu&#x27;s office several times for various aches and pains, but in March 2020, just before the initial shutdown, I started seeing him for fertility issues and continued seeing him throughout the pandemic. The office adopted safety measures quickly, and I always felt comfortable and safe going there. Since I was working from home and was avoiding contact with pretty much everyone, I saw Dr. Ryu more than anyone else, other than my husband, and the office became essentially my quarantine pod. I&#x27;m so grateful to everyone there for the warmth and exceptional care that was shown to me. I did treatments and took herbal medicine through the end of last year, and I&#x27;m happy to say that treatments were successful, and I&#x27;m expecting my baby later this year.&quot;</p><img src="images/karen_K.jpg" loading="lazy" alt="" class="testimonial_image">
         <div class="testimonial_author">Karen K.</div>
         <div class="testimonial_location">Los Angeles, CA</div>
-        <div class="testimonial_date">6/13/2020</div>
+        <div class="testimonial_date">6/13/2021</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
       <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
