Adjusted stats on homepage and published

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jun 18 2021 06:48:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 20 2021 05:13:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -113,7 +113,7 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="_2_block_row_reverse">
         <div data-w-id="058240cb-5cb0-a0b3-8ec6-6bc7cefed0ad" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="100vw" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -130,14 +130,14 @@ drift.load('r73nxaxiv89c');
           <div class="featured_number_wrapper">
             <div class="circle_wrapper">
               <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f742" style="opacity:0" class="circle_div">
-                <h4 class="counter">110</h4>
+                <h4 class="counter">112</h4>
                 <div class="circle_titles">5 Star Reviews</div>
               </div>
             </div>
             <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="A blue dotted arrow pointing to the right." class="arrow_image_left"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="A blue dotted arrow pointing down." class="arrow_image_left_mobile"></div>
             <div class="circle_wrapper">
               <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f74b" style="opacity:0" class="circle_div">
-                <h4 class="counter">13,323</h4>
+                <h4 class="counter">13,399</h4>
                 <div class="circle_titles">Repeat Visits</div>
               </div>
             </div>
@@ -248,7 +248,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -266,7 +266,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -284,7 +284,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
             <script type="application/json" class="w-json">{
   "items": [
     {
