--- a/moxibustion.html
+++ b/moxibustion.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Thu Jun 24 2021 06:50:05 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f75c2fc0235e6eb492cbd63" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
+<html data-wf-page="60d42acb1e8ef300d458b637" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Protected page</title>
-  <meta content="Protected page" property="og:title">
-  <meta content="Protected page" property="twitter:title">
+  <title>Moxibustion</title>
+  <meta content="Moxibustion" property="og:title">
+  <meta content="Moxibustion" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -42,25 +42,7 @@ drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
 </head>
-<body class="ryu_body">
-  <div class="utility-page-wrap">
-    <div class="utility-page-content w-password-page w-form">
-      <form action="/.wf_auth" method="post" class="utility-page-form w-password-page"><img src="https://d3e54v103j8qbb.cloudfront.net/static/password-page-lock.832ca8e2c9.svg" alt="">
-        <h2 class="section_h2">Protected Page</h2><input type="password" autofocus="true" maxlength="256" name="pass" placeholder="Enter your password" class="w-password-page w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="ryu_button w-password-page w-button">
-        <div class="w-password-page w-form-fail">
-          <div>Incorrect password. Please try again.</div>
-        </div>
-        <div style="display:none" class="w-password-page w-embed w-script"><input type="hidden" name="path" value="<%WF_FORM_VALUE_PATH%>"><input type="hidden" name="page" value="<%WF_FORM_VALUE_PAGE%>"></div>
-        <div style="display:none" class="w-password-page w-embed w-script">
-          <script type="application/javascript">(function _handlePasswordPageOnload() {
-	  if (/[?&]e=1(&|$)/.test(document.location.search)) {
-	    document.querySelector('.w-password-page.w-form-fail').style.display = 'block';
-	  }
-	})()</script>
-        </div>
-      </form>
-    </div>
-  </div>
+<body>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
